--- a/templates/account/password_reset_done.html
+++ b/templates/account/password_reset_done.html
@@ -38,8 +38,8 @@
 <body>
     <div class="container">
         <div class="menu">
-            <a href="/login">Login</a>
-            <a href="/signup">Sign Up</a>
+            <a href="{% url "account_login" %}">Login</a>
+            <a href="{% url "account_signup" %}">Sign Up</a>
         </div>
         <p>We have sent you an email. If you have not received it please check your spam folder. Otherwise contact us if you do not receive it in a few minutes.</p>
     </div>
