--- a/templates/account/password_reset_from_key.html
+++ b/templates/account/password_reset_from_key.html
@@ -102,7 +102,7 @@ input[type="password"]:focus {
                 {% blocktrans %}The password reset link was invalid, possibly because it has already been used. Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}
             </p>
         {% else %}
-            <form method="post" action="{% url "login" %}">
+            <form method="post" action="{% url "account_login" %}">
                 {% csrf_token %}
                 {{ redirect_field }}
                 <div class="form-group">
